--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "server": "node ./bin/www"
+        "start": "node ./bin/www",
+        "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
     },
     "dependencies": {
         "cookie-parser": "~1.4.4",
@@ -17,5 +18,8 @@
         "mongoose": "^5.10.9",
         "morgan": "~1.9.1",
         "uniqid": "^5.2.0"
+    },
+    "engines": {
+        "node": "16.13.0"
     }
 }
