--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "bootstrap": "^4.5.3",
-    "jquery": "^3.5.1",
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0",
+    "nanoid": "^4.0.0",
     "popper.js": "^1.16.1",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "3.4.4",
-    "reactstrap": "^8.6.0"
+    "react-scripts": "^3.4.4",
+    "reactstrap": "^9.1.2",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
