--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "mongodb": "^3.6.2",
         "mongoose": "^5.10.9",
         "morgan": "~1.9.1",
-        "uniqid": "^5.2.0"
+        "uniqid": "^5.2.0",
+        "url": "^0.11.0",
+        "validator": "^13.7.0"
     },
     "engines": {
         "node": "16.13.0"
